<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardView_Style">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView_Style"
                android:paddingStart="5dp"
                android:id="@+id/Id"
                android:text="@string/ID"
                android:textSize="18sp" />

            <TextView
                style="@style/TextView_Style"
                android:paddingStart="0dp"
                android:id="@+id/FirstName"
                android:text="@string/FirstName"
                android:textSize="18sp" />

            <TextView
                style="@style/TextView_Style"
                android:paddingStart="0dp"
                android:id="@+id/LastName"
                android:text="@string/LastName"
                android:textSize="18sp" />

        </LinearLayout>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/Gender"
                android:text="@string/Gender" />

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/Birthday"
                android:text="@string/Birthday"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/StartWorkDate"
                android:text="@string/StartWorkDate"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/Salary"
                android:text="@string/Salary"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/Seniority"
                android:text="@string/Seniority"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/Section14StartDate"
                android:text="@string/Section14StartDate"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/Section14Percent"
                android:text="@string/Section14Percent"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/AssetValue"
                android:text="@string/AssetValue"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/LeftDate"
                android:text="@string/LeftDate"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/ReasonForLeaving"
                android:text="@string/ReasonForLeaving"/>

            <TextView
                style="@style/TextView_Style"
                android:id="@+id/Deposits"
                android:text="@string/Deposits"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>